Closed Bug 1590673 Opened 6 years ago Closed 6 years ago

Crash in [@ mozilla::net::nsHttpChannel::ComputeCrossOriginOpenerPolicyMismatch]

Categories

(Core :: DOM: Navigation, defect)

Unspecified
Linux
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla72
Tracking Status
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 --- unaffected
firefox72 --- verified

People

(Reporter: freddy, Assigned: valentin)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-e1814a96-709d-446f-be00-4a8ad0191023.

Top 10 frames of crashing thread:

0 libxul.so mozilla::net::nsHttpChannel::ComputeCrossOriginOpenerPolicyMismatch netwerk/protocol/http/nsHttpChannel.cpp:7400
1 libxul.so mozilla::net::nsHttpChannel::OnStartRequest netwerk/protocol/http/nsHttpChannel.cpp:7738
2 libxul.so nsInputStreamPump::OnStateStart netwerk/base/nsInputStreamPump.cpp:487
3 libxul.so nsInputStreamPump::OnInputStreamReady netwerk/base/nsInputStreamPump.cpp:396
4 libxul.so nsInputStreamReadyEvent::Run xpcom/io/nsStreamUtils.cpp:91
5 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
6 libxul.so <name omitted> xpcom/threads/nsThreadUtils.cpp:486
7 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:88
8 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
9 libxul.so nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137

I have reproducible steps to repeat with the latest Nightly build:

  1. Open a New Tab
  2. Go to https://resume.github.io/
  3. Refresh (hitting CTRL+R)
  4. Crash reporter opens

Maybe<T>::emplace has a MOZ_DIAGNOSTIC_ASSERT that the value is not already assigned.
When revalidating, the method ends up being called twice - so we must instead assign to Some(T) to avoid the assertion, since that is the correct way to do this.

Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/d2041efeb9ee Avoid assertion when assigning Maybe<Policy> r=JuniorHsu
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Flags: qe-verify+

I've tried to reproduce this issue with the provided steps from comment 1. Unfortunately, Firefox doesn't crash on Ubuntu 18.04 x64 when refreshing the page on an affected Nightly build (2019-10-23).

Hi, Frederik! Could you please help verifying this bug on FIrefox 72.0.2, since you were able to reproduce the crash?

Flags: needinfo?(fbraun)

I can verify it's fixed.

Flags: needinfo?(fbraun)

Thanks! Marking this as verified fixed per the above comment.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: