Bug 1590673 - Avoid assertion when assigning Maybe<Policy> r=JuniorHsu

Maybe<T>::emplace has a MOZ_DIAGNOSTIC_ASSERT that the value is not already assigned.
When revalidating, the method ends up being called twice - so we must instead assign to Some(T) to avoid the assertion, since that is the correct way to do this.

Differential Revision: https://phabricator.services.mozilla.com/D50179